# docs/swagger.yaml
@@ -88,6 +88,13 @@ definitions:
       string:
         type: string
     type: object
+  github_com_arfan21_synapsis_id_internal_model.GetPayemntMethodResponse:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+    type: object
   github_com_arfan21_synapsis_id_internal_model.GetProductResponse:
     properties:
       category_id:
@@ -402,6 +409,32 @@ paths:
       summary: Register Customer
       tags:
       - Customer
+  /api/v1/payments/methods:
+    get:
+      consumes:
+      - application/json
+      description: Get Payment Methods
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_arfan21_synapsis_id_pkg_pkgutil.HTTPResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/github_com_arfan21_synapsis_id_internal_model.GetPayemntMethodResponse'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_arfan21_synapsis_id_pkg_pkgutil.HTTPResponse'
+      summary: Get Payment Methods
+      tags:
+      - Payment
   /api/v1/products:
     get:
       consumes:
