# internal/server/routes.go
@@ -8,6 +8,9 @@ import (
 	customerrepo "github.com/arfan21/synapsis_id/internal/customer/repository"
 	customersvc "github.com/arfan21/synapsis_id/internal/customer/service"
 	"github.com/arfan21/synapsis_id/internal/middleware"
+	paymentctrl "github.com/arfan21/synapsis_id/internal/payment/controller"
+	paymentrepo "github.com/arfan21/synapsis_id/internal/payment/repository"
+	paymentsvc "github.com/arfan21/synapsis_id/internal/payment/service"
 	productctrl "github.com/arfan21/synapsis_id/internal/product/controller"
 	productrepo "github.com/arfan21/synapsis_id/internal/product/repository"
 	productsvc "github.com/arfan21/synapsis_id/internal/product/service"
@@ -32,9 +35,14 @@ func (s *Server) Routes() {
 	cartSvc := cartsvc.New(cartRepo, productSvc)
 	cartCtrl := cartctrl.New(cartSvc)
 
+	paymentRepo := paymentrepo.New(s.db)
+	paymentSvc := paymentsvc.New(paymentRepo)
+	paymentCtrl := paymentctrl.New(paymentSvc)
+
 	s.RoutesCustomer(api, customerCtrl)
 	s.RoutesProduct(api, productCtrl)
 	s.RoutesCart(api, cartCtrl)
+	s.RoutesPayment(api, paymentCtrl)
 }
 
 func (s Server) RoutesCustomer(route fiber.Router, ctrl *customerctrl.ControllerHTTP) {
@@ -59,4 +67,10 @@ func (s Server) RoutesCart(route fiber.Router, ctrl *cartctrl.ControllerHTTP) {
 	cartsV1.Post("", middleware.JWTAuth, ctrl.Create)
 	cartsV1.Get("", middleware.JWTAuth, ctrl.GetByCustomerID)
 	cartsV1.Delete("", middleware.JWTAuth, ctrl.Delete)
+}
+
+func (s Server) RoutesPayment(route fiber.Router, ctrl *paymentctrl.ControllerHTTP) {
+	v1 := route.Group("/v1")
+	paymentsV1 := v1.Group("/payments")
+	paymentsV1.Get("/methods", ctrl.GetPaymentMethods)
 }
